@startuml

interface Lapiz{
    Trazar(Posicion, Posicion)
}
Lapiz ...> Posicion
Lapiz ...> SectorDibujo

class LapizAbajo implements Lapiz, Bloque{
}

class LapizArriba implements Lapiz, Bloque{
}

class SectorDibujo{
    - {static} SectorDibujo
    - List<Segmento>
    - {static} crearInstancia()
    + {static} obtenerSectorDibujo(): SectorDibujo
    + resetear()
    + aplicarTrazo()
    + obtenerDibujo(): List<Segmento>
}
@enduml